[package]
name = "knifey-service"
version = "0.1.0"
edition = "2021"

[dependencies]
fastrand = "1.7.0"
serenity = { version = "0.11.4", default-features = false, features = ["cache", "client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
knifey-core = { path = "../knifey-core" }
